# VisuAlis

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
backend/: Cargo.toml
backend/src/: compile.rs  db.rs  error.rs  main.rs  projects.rs  router.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  lib.rs  project.rs  typecheck.rs  workspace.rs
compiler/src/emit/: action.rs  component.rs  expr.rs  mod.rs  page.rs  runtime.rs
docs/: VisuAlis_implementation.md  VisuAlis_implementation_plan_v2.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  app.css  main.tsx
frontend/src/lib/: api.ts  nodeRegistry.ts  registry.ts  store.ts  typecheck.ts  types.ts
frontend/src/lib/components/: ActionList.tsx  PageList.tsx  Palette.tsx  Toolbar.tsx
frontend/src/lib/components/Canvas/: Breadcrumb.tsx  ComponentTree.tsx  DesignCanvas.tsx  FlowCanvas.tsx  Frame.tsx  SelectionFrame.tsx  dnd.ts  layout.ts
frontend/src/lib/components/Inspector/: ComponentInspector.tsx  Inspector.tsx  NodeInspector.tsx  PageInspector.tsx
frontend/src/lib/components/components/: BufferC.tsx  ButtonC.tsx  CheckboxC.tsx  ContainerC.tsx  DropdownC.tsx  FileUploadC.tsx  LabelC.tsx  StaticTextC.tsx  TableC.tsx  TextInputC.tsx  VideoC.tsx
frontend/src/lib/components/nodes/: BaseNode.tsx  BranchNode.tsx  ConstantNode.tsx  FetchNode.tsx  GetValueNode.tsx  LoopNode.tsx  OriginNode.tsx  PureNode.tsx  RedirectNode.tsx  SetValueNode.tsx  TerminateNode.tsx
