[package]
name = "visualis-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "visualis-backend"
path = "src/main.rs"

[dependencies]
visualis-compiler = { path = "../compiler" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
